java/java-tests/testData/codeInsight/daemonCodeAnalyzer/lambda/interfaceMethods/DefaultMethodOverrideEquivalentObject.java
interface A {
    default String <error descr="Default method 'toString' overrides a member of 'java.lang.Object'">toString</error>() {
        return "";
    }
    default void finalize() throws Throwable { }
}